# habit-tracker

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a1c104fd02e_init_with_description.py  b4ee843f45aa_add_time_field_to_habit.py  deabdf877168_init_retry.py
app/: main.py
app/bot/: bot.py
app/bot/handlers/: habits.py  start.py
app/bot/handlers/habits/: __init__.py  common.py  create.py  edit.py  keyboards.py  list.py
app/bot/schemas/: habit.py  user.py
app/bot/services/: api_client.py
app/core/: config.py
app/crud/: habit.py  user.py
app/database/: database.py  session.py
app/models/: __init__.py  enums.py  habit.py  track.py  user.py
app/routers/: habits.py  user.py
app/schemas/: habit.py  track.py  user.py
app/services/: habit.py  user.py
